[tool.poetry]
name = "space-invaders"
version = "1.0.0"
description = "Space Invaders"
authors = ["Tyler Artinger <artinger.tb@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pgzero = "^1.2.1"
moviepy = "^1.0.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
